package com.swent.shifter.ui.navigation

object NavigationTestTags {
  const val TOP_BAR_TITLE = "TopBarTitle"
  const val GO_BACK_BUTTON = "GoBackButton"
  const val BOTTOM_NAVIGATION_MENU = "BottomNavigationMenu"

  const val OVERVIEW_TAB = "OverviewTab"
  const val MAP_TAB = "MapTab"
  const val DISCUSSIONS_TAB = "DiscussionsTab"
  const val PEOPLE_TAB = "PeopleTab"
}
